fixed footer spacing

--- a/src/app/components/footer/Footer.module.css
+++ b/src/app/components/footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100vw;
-  height: 10vh;
+  height: 12.5vh;
   background-color: #219ebc;
 
   display: flex;
